[package]
name = "nodewatch"
authors = ["jon roethke jon@chainsafe.io"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/waymobetta/nodewatch"
keywords = ["tui", "terminal", "dashboard"]
readme = "README.md"
license = "MIT"

[badges]

[features]
default = ["termion"]

[dependencies]
tui = "0.16"
bitflags = "1.0"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "1.5", optional = true }
rustbox = { version = "0.11", optional = true }
crossterm = { version = "0.21.0", optional = true }
easycurses = { version = "0.13.0", optional = true }
pancurses = { version = "0.17.0", optional = true, features = ["win32a"] }
# serde = { version = "1", "optional" = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
argh = "0.1"

[[bin]]
name = "nodewatch"
